# jq-lite

./: Cargo.toml  LICENSE  README.md
src/: data.json  help_utils.rs  main.rs  parse_utils.rs
tests/: cli.rs
