[package]
name = "jq-lite"
version = "0.1.5"
edition = "2024"
description = "A lightweight CLI tool for querying JSON using dot notation"
license = "MIT"
repository = "https://github.com/sam-c14/jq-lite"
homepage = "https://github.com/sam-c14/jq-lite"
documentation = "https://docs.rs/jq-lite"
readme = "README.md"
keywords = ["json", "cli", "jq", "parser"]
categories = ["command-line-utilities"]

[dependencies]
serde_json = "1.0.149"

[[bin]]
name = "jq-lite"
path = "src/main.rs"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"

# [lib]
# path = "lib.rs"
